increase z-index for rv autocomplete, fix #45 again

--- a/scss/theme/_plugin-fixes.scss
+++ b/scss/theme/_plugin-fixes.scss
@@ -139,7 +139,7 @@ ul#thumbnails .gthumb a img.thumbnail {
 }
 
 /* RV Autocomplete */
-ul.ui-autocomplete { z-index: 150; }
+ul.ui-autocomplete { z-index: 1050; }
 
 /* Extended Description */
 ul.thumbnailCategories { padding-top: 20px; }
